--- a/app/views/curation_concerns/monographs/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/monographs/_attribute_rows.html.erb
@@ -8,4 +8,4 @@
   <%= presenter.attribute_to_html(:date) %>
   <%= presenter.attribute_to_html(:isbn) %>
   <%= presenter.attribute_to_html(:copyright_holder) %>
-  <%= presenter.attribute_to_html(:buy_URL) %>
+  <%= presenter.attribute_to_html(:buy_url) %>
