--- a/app/views/curation_concerns/monographs/_form_additional_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_additional_information.html.erb
@@ -8,5 +8,5 @@
   <%= f.input :isbn,                   as: :multi_value, input_html: { class: 'form-control' }, label: 'ISBN' %>
   <%= f.input :editor,                 as: :multi_value, input_html: { class: 'form-control' }, label: 'Editor' %>
   <%= f.input :copyright_holder,       as: :multi_value, input_html: { class: 'form-control' }, label: 'Copyright Holder' %>
-  <%= f.input :buy_URL,                as: :multi_value, input_html: { class: 'form-control' }, label: 'Buy URL' %>
+  <%= f.input :buy_url,                as: :multi_value, input_html: { class: 'form-control' }, label: 'Buy URL' %>
 </fieldset>
