--- a/app/views/curation_concerns/monographs/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/monographs/_attribute_rows.html.erb
@@ -5,7 +5,7 @@
   <%= presenter.attribute_to_html(:subject, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:publisher) %>
   <%= presenter.attribute_to_html(:language) %>
-  <%= presenter.attribute_to_html(:date) %>
+  <%= presenter.attribute_to_html(:date_published) %>
   <%= presenter.attribute_to_html(:isbn) %>
   <%= presenter.attribute_to_html(:copyright_holder) %>
   <%= presenter.attribute_to_html(:buy_url) %>
