--- a/app/views/curation_concerns/monographs/_form_additional_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_additional_information.html.erb
@@ -2,7 +2,7 @@
   <legend>Additional Information</legend>
   <%= f.input :subject,                as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :publisher,              as: :multi_value, input_html: { class: 'form-control' } %>
-  <%= f.input :date_published %>
+  <%= f.input :date_published,         as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :source,                 as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :language,               as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :isbn,                   as: :multi_value, input_html: { class: 'form-control' } %>
