--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,3 +1,4 @@
+  <h2>Manage user permissions</h2>
   <%= form_for @press, url: update_all_press_roles_path(@press) do |f| %>
     <table class="table table-striped users">
       <thead>
@@ -51,7 +52,7 @@
 
     <div class="form-actions">
       <div class="primary-actions">
-      <%= link_to 'Create user', [@press, Role.new], class: 'btn btn-default', data: { behavior: 'new-user'} %>
+      <%= link_to 'Add a new role', [@press, Role.new], class: 'btn btn-default', data: { behavior: 'new-user'} %>
       </div>
     </div>
   <% end %>
