Upgrade curation_concerns gem

--- a/app/assets/stylesheets/curation_concerns.scss
+++ b/app/assets/stylesheets/curation_concerns.scss
@@ -1,3 +1,4 @@
 //@import 'blacklight/blacklight';
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
 @import 'curation_concerns/curation_concerns';
-
