--- a/app/views/presses/show.html.erb
+++ b/app/views/presses/show.html.erb
@@ -1,8 +1,4 @@
-<h2><%= @press.name %></h2>
-
-<% if @press.logo_path %>
-  <p><%= image_tag @press.logo_path %></p>
-<% end %>
+<%= render 'shared/press_branding' %>
 
 <p><%= @press.description %></p>
 
