--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,3 +1,5 @@
+  <%= render 'shared/press_branding' %>
+
   <h2>Manage user permissions</h2>
   <%= form_for @press, url: update_all_press_roles_path(@press) do |f| %>
     <table class="table table-striped users">
