--- a/app/views/curation_concerns/sections/_form_supplementary_fields.html.erb
+++ b/app/views/curation_concerns/sections/_form_supplementary_fields.html.erb
@@ -1,1 +1,5 @@
-<% # displays nothing %>
+<div class="row with-headroom">
+  <div class="col-md-12">
+    <%= render "form_permission", f: f %>
+  </div>
+</div>
