--- a/app/views/curation_concerns/sections/_form_descriptive_fields.erb
+++ b/app/views/curation_concerns/sections/_form_descriptive_fields.erb
@@ -3,7 +3,7 @@
     <fieldset class="required">
       <legend>Required Information</legend>
       <%= f.input :title, as: :multi_value %>
-      <%= f.input :monograph_id, collection: Monograph.all.map { |b| [b.title.first, b.id] } %>
+      <%= f.input :monograph_id, collection: Monograph.all.map { |b| [b.title.first, b.id] }, selected: @form.monograph_id %>
     </fieldset>
   </div>
 </div>
