--- a/app/views/curation_concerns/monographs/_form_additional_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_additional_information.html.erb
@@ -1,5 +1,6 @@
 <fieldset class="optional prompt">
   <legend>Additional Information</legend>
+  <%= f.input :sub_brand, collection: @form.select_sub_brand, include_blank: true, input_html: {  multiple: true, class: 'form-control' } %>
   <%= f.input :subject,                as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :publisher,              as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :date_published,         as: :multi_value, input_html: { class: 'form-control' } %>
