--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -1,7 +1,7 @@
 <%= presenter.attribute_to_html(:relation) %>
 <%= presenter.attribute_to_html(:caption) %>
 <%= presenter.attribute_to_html(:description) %>
-<%= presenter.attribute_to_html(:creator, catalog_search_link: true ) %>
+<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', catalog_search_link: true ) %>
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:resource_type) %>
