Separate creator first and last name. Story #155

--- a/app/views/curation_concerns/monographs/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/monographs/_attribute_rows.html.erb
@@ -1,5 +1,5 @@
   <%= presenter.attribute_to_html(:description) %>
-  <%= presenter.attribute_to_html(:creator, catalog_search_link: true ) %>
+  <%= presenter.attribute_to_html(:creator_full_name, catalog_search_link: true ) %>
   <%= presenter.attribute_to_html(:editor, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:subject, catalog_search_link: true) %>
