add a couple of metadata fields and a test for reusing the same asset in different sections

--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -10,3 +10,5 @@
 <%= presenter.attribute_to_html(:language) %>
 <%= presenter.attribute_to_html(:date_created) %>
 <%= presenter.attribute_to_html(:copyright_holder) %>
+<%= presenter.attribute_to_html(:external_resource) %>
+<%= presenter.attribute_to_html(:persistent_id) %>
