maybe disable downloads based on metadata, #287

--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -21,6 +21,11 @@
     }).addLayer(L.tileLayer.iiif("<%= riiif.info_path(@presenter.id) %>"));
   });
   </script>
+
+  <% if @presenter.allow_download? %>
+    <%= link_to "Download the full-sized image", main_app.download_path(@presenter.id), target: "_new" %>
+  <% end %>
+  
 <% else %>
   <%= media_display @presenter %>
 <% end %>
