--- a/app/views/curation_concerns/file_sets/media_display/_image.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_image.html.erb
@@ -4,7 +4,7 @@
             <%= image_tag thumbnail_url(file_set),
                           class: "img-responsive",
                           alt: "Download the full-sized image of #{file_set.to_s}" %>
-            <figcaption>Download the full-sized image</figcaption>
+            <!-- <figcaption>Download the full-sized image</figcaption> -->
         </figure>
     <% end %>
 <% else %>
