--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -1,6 +1,6 @@
 <%= presenter.attribute_to_html(:relation) %>
 
-<%= presenter.attribute_to_html(:description) %>
+<%= presenter.attribute_to_html(:description, render_as: :markdown) %>
 <%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
@@ -28,5 +28,5 @@
 <%= presenter.attribute_to_html(:ext_url_doi_or_handle, label: 'External URL/DOI') %>
 <%= presenter.attribute_to_html(:use_crossref_xml, label: 'Use Crossref XML?') %>
 <%= presenter.attribute_to_html(:primary_creator_role, label: 'Primary Creator Role') %>
-<%= presenter.attribute_to_html(:transcript, label: 'Transcript') %>
-<%= presenter.attribute_to_html(:translation, label: 'Translation') %>
+<%= presenter.attribute_to_html(:transcript, render_as: :markdown, label: 'Transcript') %>
+<%= presenter.attribute_to_html(:translation, render_as: :markdown, label: 'Translation') %>
