--- a/app/views/curation_concerns/monographs/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/monographs/_attribute_rows.html.erb
@@ -1,4 +1,4 @@
-  <%= presenter.attribute_to_html(:description) %>
+  <%= presenter.attribute_to_html(:description, render_as: :markdown) %>
   <%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', render_as: :linked) %>
   <%= presenter.attribute_to_html(:editor, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :linked) %>
