--- a/app/views/curation_concerns/sections/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/sections/_attribute_rows.html.erb
@@ -1,1 +1,1 @@
-  <%= presenter.attribute_to_html(:monograph_label) %>
+  <%= presenter.attribute_to_html(:monograph_label, render_as: :markdown) %>
