--- a/app/views/curation_concerns/file_sets/_attributes.html.erb
+++ b/app/views/curation_concerns/file_sets/_attributes.html.erb
@@ -2,7 +2,7 @@
   <li role="presentation" class="active"><a href="#info" aria-controls="info" role="tab" data-toggle="tab">Info</a></li>
   <li role="presentation"><a href="#permissions" aria-controls="permissions" role="tab" data-toggle="tab">Permissions</a></li>
   <!-- <li role="presentation"><a href="#stats" aria-controls="stats" role="tab" data-toggle="tab">Stats</a></li> -->
-  <!-- <li role="presentation"><a href="#technical-info" aria-controls="technical-info" role="tab" data-toggle="tab">Technical Info</a></li> -->
+  <li role="presentation"><a href="#technical-info" aria-controls="technical-info" role="tab" data-toggle="tab">Technical Info</a></li>
 </ul>
 
 <div class="tab-content">
@@ -26,8 +26,7 @@
     <%= render 'attribute_rows_stats', presenter: presenter %>
   </div>  <!-- /.stats panel -->
   <% end %>
-  <!-- TODO: create presenter for asset's file metadata fields -->
-  <% if false %>
+
   <div role="tabpanel" class="tab-pane fade" id="technical-info">
     <table class="table <%= dom_class(presenter) %> attributes" <%= presenter.microdata_type_to_html %>>
       <tbody>
@@ -35,5 +34,5 @@
       </tbody>
     </table>
    </div> <!-- /.technical-info panel -->
-  <% end %>
+
 </div> <!-- /.tab-content Tab panes -->
