--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -4,7 +4,7 @@
 <%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
 <!-- TODO: get subjects from parent monograph -->
 <%= presenter.attribute_to_html(:display_date, label: 'Date') %>
-<!-- TODO: get section name asset is attached to -->
+<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :markdown) %>
 <%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:content_type, label: 'Content Type') %>
 <%= presenter.attribute_to_html(:language) %>
