--- a/app/views/curation_concerns/monographs/_form_additional_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_additional_information.html.erb
@@ -2,11 +2,11 @@
   <legend>Additional Information</legend>
   <%= f.input :sub_brand, collection: @form.select_sub_brand, include_blank: true, input_html: {  multiple: true, class: 'form-control' } %>
   <%= f.input :subject,                as: :multi_value, input_html: { class: 'form-control' } %>
-  <%= f.input :publisher,              as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :date_published,         as: :multi_value, input_html: { class: 'form-control' } %>
-  <%= f.input :source,                 as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :language,               as: :multi_value, input_html: { class: 'form-control' } %>
-  <%= f.input :isbn,                   as: :multi_value, input_html: { class: 'form-control' } %>
+  <%= f.input :isbn,                   as: :multi_value, input_html: { class: 'form-control' }, label: 'ISBN (Hardcover)' %>
+  <%= f.input :isbn_softcover,         as: :multi_value, input_html: { class: 'form-control', label: 'ISBN (Softcover)' } %>
+  <%= f.input :isbn_ebook,             as: :multi_value, input_html: { class: 'form-control', label: 'ISBN (E-Book)' } %>  
   <%= f.input :editor,                 as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :copyright_holder,       as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :buy_url,                as: :multi_value, input_html: { class: 'form-control' } %>
