--- a/app/views/curation_concerns/monographs/_form_additional_information.html.erb
+++ b/app/views/curation_concerns/monographs/_form_additional_information.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :date_published,         as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :language,               as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :isbn,                   as: :multi_value, input_html: { class: 'form-control' }, label: 'ISBN (Hardcover)' %>
-  <%= f.input :isbn_softcover,         as: :multi_value, input_html: { class: 'form-control', label: 'ISBN (Softcover)' } %>
+  <%= f.input :isbn_paper,         as: :multi_value, input_html: { class: 'form-control', label: 'ISBN (Paper)' } %>
   <%= f.input :isbn_ebook,             as: :multi_value, input_html: { class: 'form-control', label: 'ISBN (E-Book)' } %>  
   <%= f.input :editor,                 as: :multi_value, input_html: { class: 'form-control' } %>
   <%= f.input :copyright_holder,       as: :multi_value, input_html: { class: 'form-control' } %>
