use markdown for buy_book

--- a/app/views/curation_concerns/monographs/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/monographs/_attribute_rows.html.erb
@@ -10,4 +10,4 @@
   <%= presenter.attribute_to_html(:isbn_paper, label: 'ISBN (Paper)') %>
   <%= presenter.attribute_to_html(:isbn_ebook, label: 'ISBN (E-Book)') %>
   <%= presenter.attribute_to_html(:copyright_holder) %>
-  <%= presenter.attribute_to_html(:buy_url) %>
+  <%= presenter.attribute_to_html(:buy_url, render_as: :markdown) %>
