remove src from video source elements

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -1,10 +1,15 @@
 // custom styles for heliotrope
 
-
 .asset {
-  // leaflet
+
+  // leaflet-images
   #image {
     height: 540px;
+    width: 97%;
+  }
+
+  // video
+  video {
     width: 97%;
   }
 
