--- a/app/views/monograph_catalog/_index_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_file_set.html.erb
@@ -1,11 +1,11 @@
 <%# default partial to display solr document fields in catalog index view -%>
-<dl class="document-metadata dl-horizontal dl-invert">
+  <div class="document-metadata">
 
-  <% index_fields(document).each do |field_name, field| -%>
-    <% if should_render_index_field? document, field %>
-	    <dt class="blacklight-<%= field_name.parameterize %>"><%= render_index_field_label document, field: field_name %></dt>
-	    <dd class="blacklight-<%= field_name.parameterize %>"><%= render_markdown render_index_field_value document, field: field_name %></dd>
+    <% index_fields(document).each do |field_name, field| -%>
+      <% if should_render_index_field? document, field %>
+  	    <p class="blacklight-<%= field_name.parameterize %>"><%= render_markdown render_index_field_value document, field: field_name %></p>
+      <% end -%>
     <% end -%>
-  <% end -%>
 
-</dl>
+  </div>
+</div>
