--- a/app/views/monograph_catalog/_index_header_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_header_list_file_set.html.erb
@@ -1,12 +1,11 @@
 <% # header bar for doc items in index view -%>
-<div class="documentHeader">
-  <h4 class="index_title">
-    <% counter = document_counter_with_offset(document_counter) %>
-    <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
-
+<div class="col-sm-9">
+  <div class="documentHeader">
+    <h4 class="index_title">
+      <% counter = document_counter_with_offset(document_counter) %>
+      <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
+    </h4>
     <% if document.section_id.present? %>
-      <p>From <%= render_markdown link_to document.section_title.first, curation_concerns_section_path(document.section_id) %></p>
+      <p>From <%= render_markdown document.section_title.first %></p>
     <% end %>
-
-  </h4>
-</div>
+  </div>
