--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -1,59 +1,59 @@
 <% provide :page_title, @monograph_presenter.title.first || "Title" %>
-<% provide :page_class, 'search' %>
+<% provide :page_class, 'search monograph' %>
 
 <% provide :page_header do %>
 
 <% end %>
 
 <% provide :sidebar do %>
-  <%= render 'curation_concerns/base/representative_media', presenter: @monograph_presenter %>
+  <div class="monograph-info">
+    <div class="monograph-cover">
+      <%= render 'curation_concerns/base/representative_media', presenter: @monograph_presenter %>
+    </div><!-- /.monograph-cover -->
+    <div class="monograph-metadata">
+      <h2><%= render_markdown @monograph_presenter.title.first || '' %></h2>
+      <% if can?(:edit, @monograph_presenter.id) %>
+        <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
+      <% end %>
+      <h3><%= @monograph_presenter.creator_given_name.first %> <%= @monograph_presenter.creator_family_name.first %></h3>
+      <p class="description"><%= render_markdown @monograph_presenter.description.first || '' %></p>
+      <div class="isbn">
+        <% if defined?(@monograph_presenter.isbn) %>
+        <ul class="isbn-hardcover list-unstyled">
+          <% @monograph_presenter.isbn.each do |isbn| %>
+            <li>ISBN (Hardcover): <%= isbn %></li>
+          <% end %>
+        </ul>
+        <% end %>
+        <% if defined?(@monograph_presenter.isbn_paper) %>
+        <ul class="isbn-paper list-unstyled">
+          <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
+            <li>ISBN (Paper): <%= isbn_paper %></li>
+          <% end %>
+        </ul>
+        <% end %>
+        <% if defined?(@monograph_presenter.isbn_ebook) %>
+        <ul class="isbn-ebook list-unstyled">
+          <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
+            <li>ISBN (E-Book): <%= isbn_ebook %></li>
+          <% end %>
+        </ul>
+        <% end %>
+      </div> <!-- /.isbn -->
 
-  <h2><%= render_markdown @monograph_presenter.title.first || '' %></h2>
-
-  <% if can?(:edit, @monograph_presenter.id) %>
-    <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
+      <% if defined?(@monograph_presenter.buy_url) %>
+      <div class="btn-toolbar" role="toolbar" aria-label="">
+        <div class="btn-group" role="group" aria-label="">
+            <a href="<%= @monograph_presenter.buy_url.first %>" target="_blank" title="Buy <%= @monograph_presenter.title.first %>" role="button" class="btn btn-default btn-small">Buy Book</a>
+        </div>
+      </div>
+      <% end %>
+    </div><!-- /.monograph-metadata -->
+  </div><!-- /.monograph-info -->
+  <hr>
+  <%= render 'catalog/search_sidebar' %>
   <% end %>
 
-  <h3><%= @monograph_presenter.creator_given_name.first %> <%= @monograph_presenter.creator_family_name.first %></h3>
-
-  <p><%= render_markdown @monograph_presenter.description.first || '' %></h3>
-
-    <% if defined?(@monograph_presenter.isbn) %>
-      <ul class="isbn list-unstyled">
-        <% @monograph_presenter.isbn.each do |isbn| %>
-          <li>ISBN (Hardcover): <%= isbn %></li>
-        <% end %>
-      </ul>
-    <% end %>
-
-    <% if defined?(@monograph_presenter.isbn_paper) %>
-      <ul class="isbn list-unstyled">
-        <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
-          <li>ISBN (Paper): <%= isbn_paper %></li>
-        <% end %>
-      </ul>
-    <% end %>
-
-    <% if defined?(@monograph_presenter.isbn_ebook) %>
-      <ul class="isbn list-unstyled">
-        <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
-          <li>ISBN (E-Book): <%= isbn_ebook %></li>
-        <% end %>
-      </ul>
-    <% end %>
-
-
-    <% if defined?(@monograph_presenter.buy_url) %>
-    <div class="btn-toolbar" role="toolbar" aria-label="">
-      <div class="btn-group" role="group" aria-label="">
-          <a href="<%= @monograph_presenter.buy_url.first %>" target="_blank" title="Buy <%= @monograph_presenter.title.first %>" role="button" class="btn btn-default btn-small">Buy Book</a>
-      </div>
-    </div>
-    <% end %>
-
-  <%= render 'catalog/search_sidebar' %>
-<% end %>
-
-<div id="content">
-  <%= render 'catalog/search_results' %>
-</div>
+  <div class="content">
+    <%= render 'catalog/search_results' %>
+  </div>
