new files for customizing navigation menu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require jquery-ui/datepicker
  *= require leaflet
  *= require heliotrope
+ *= require themes
  *= require_tree .
  *= require_self
  */
